# spark_wrapper

./: .env  MANIFEST.in  pyproject.toml  setup.py
examples/: example.py
spark/: __init__.py  spark.py
spark_wrapper/: __init__.py  spark_wrapper.py
test/: example.py
tests/: performance.ipynb
