[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark_wrapper"
version = "0.0.2"
authors = [
    {name = "Luis Teodoro"},
]
description = "A simple python package that itegrate spark with other tools."
requires-python = ">=3.10"
dependencies = [
    'pyspark==3.5.1',
]

[tool.hatch.build.targets.wheel]
packages = ["spark_wrapper"]
